# Big_Data

./: .gitignore  Final_16_Dataset_Evaluation_Journal.ipynb  PROJECT_CONTEXT_HANDOFF.md  README_evaluation.md  Visualization.ipynb  benchmark.py  implementations.py  loglite_benchmark.py  loglite_benchmark_avg.py  main.ipynb  notes.txt  part3_starter.ipynb  readme.md
.ipynb_checkpoints/: Visualization-checkpoint.ipynb
.query_eval_runtime/: qidx-search
LogLite-B/src/common/: constants.h  file.cc  rle.cc  rle.h
LogLite-B/src/compress/: stream_compress.cc  stream_compress.h
LogLite-B/src/tools/: xorc-cli  xorc-cli.cc
LogLite-b/src/common/: constants.h  rle.h  xor_string.cc  xor_string.h
LogLite-b/src/compress/: stream_compress.cc  stream_compress.h
LogLite-b/src/tools/: xorc-cli  xorc-cli.cc
baselines/pbc/additional_options/: zstd_dict_generate.c
baselines/pbc/src/: CMakeLists.txt
baselines/pbc/src/base/: memcpy.h
baselines/pbc/src/train/: pbc_train.cc
baselines/pbc/src/unit_test/: test_pbc_c.c
benchmark_output/: HDFS_src.lite  HDFS_src_static.static.lite  comparison.csv  comparison_avg.csv
compressed_logs/: Android_2k.log.lite.b  Android_2k.log.lite.static.b  Android_2k.log.lite.static.qidx.json  Android_2k.log.lite.static.qidx2  Android_2k.log.lite.static.qidx3  Android_2k.window.static.txt  Android_2k.window.txt  Apache_2k.log.lite.b  Apache_2k.log.lite.static.b  Apache_2k.log.lite.static.qidx.json  Apache_2k.log.lite.static.qidx2  Apache_2k.log.lite.static.qidx3  Apache_2k.window.static.txt  Apache_2k.window.txt  BGL_2k.log.lite.b  BGL_2k.log.lite.static.b  BGL_2k.log.lite.static.qidx.json  BGL_2k.log.lite.static.qidx2  BGL_2k.log.lite.static.qidx3  BGL_2k.window.static.txt  BGL_2k.window.txt  HDFS_2k.log.lite.static.qidx.json  HDFS_2k.log.lite.static.qidx2  HDFS_2k.log.lite.static.qidx3  HDFS_2k.window.static.txt  HDFS_2k.window.txt  HPC_2k.log.lite.b  HPC_2k.log.lite.static.b  HPC_2k.log.lite.static.qidx.json  HPC_2k.log.lite.static.qidx2  HPC_2k.log.lite.static.qidx3  HPC_2k.window.static.txt  HPC_2k.window.txt  Hadoop_2k.log.lite.b  Hadoop_2k.log.lite.static.b  Hadoop_2k.log.lite.static.qidx.json  Hadoop_2k.log.lite.static.qidx2  Hadoop_2k.log.lite.static.qidx3  Hadoop_2k.window.static.txt  Hadoop_2k.window.txt  (+71 more)
compressed_logs/100k/: Apache_100k.log.lite.static.b  Apache_100k.window.static.txt  Apache_100k.window.txt  Linux_100k.log.lite.b  Linux_100k.log.lite.static.b  Linux_100k.window.static.txt  Linux_100k.window.txt  artifact_build_metrics.csv
evaluation_results/query_eval/20260415_021241_smoke_suite/: cell_level_aggregate.csv  dataset_level_aggregate.csv  manifest.json  query_level_aggregate.csv  raw_runs.jsonl  suite_summary.csv
evaluation_results/query_eval/20260512_163443_static_bloom_eval/: cell_level_aggregate.csv  complete_evaluation_summary.csv  dataset_level_aggregate.csv  manifest.json  query_level_aggregate.csv  static_bloom_summary.csv  suite_summary.csv
evaluation_results/query_eval/20260516_011702_part2_research_eval/: cell_level_aggregate.csv  complete_evaluation_summary.csv  dataset_coverage.csv  dataset_level_aggregate.csv  manifest.json  query_level_aggregate.csv  suite_summary.csv
evaluation_results/query_eval/20260516_011849_part2_static_bloom_eval/: cell_level_aggregate.csv  complete_evaluation_summary.csv  dataset_level_aggregate.csv  manifest.json  part2_visualization_report.html  query_level_aggregate.csv  static_bloom_summary.csv  suite_summary.csv
evaluation_results/query_eval/20260516_012703_complete_static_evaluation/: cell_level_aggregate.csv  complete_16_dataset_visualization_report.html  complete_evaluation_summary.csv  dataset_level_aggregate.csv  manifest.json  query_level_aggregate.csv  static_bloom_summary.csv  suite_summary.csv
evaluation_results/query_eval/20260516_161420_complete_qgram_evaluation/: cell_level_aggregate.csv  complete_evaluation_summary.csv  dataset_level_aggregate.csv  manifest.json  query_level_aggregate.csv  static_bloom_summary.csv  suite_summary.csv
evaluation_results/query_eval/20260517_212524_publishable_qgram_runtime_fix/: cell_level_aggregate.csv  complete_16_dataset_visualization_report.html  complete_evaluation_summary.csv  dataset_level_aggregate.csv  manifest.json  publishable_runtime_report.md  query_level_aggregate.csv  static_bloom_summary.csv  suite_summary.csv
loglite/: readme.md
loglite/LogLite-B/src/common/: rle.cc  (+5 more)
loglite/baselines/fsst/: fsst
loglite/baselines/pbc/: CMakeLists.txt  README.md  build.sh
loglite/baselines/pbc/additional_options/: blockzstd_dict.cpp  common.h  line_fsst.cpp  zmalloc.c
loglite/baselines/pbc/data/patterns/patterns/: Android.pattern  Apache.pattern  CockroachDB.pattern  HDFS.pattern  Hadoop.pattern  HealthApp.pattern  Mac.pattern  MongoDB.pattern  OpenStack.pattern  Proxifier.pattern  Spark.pattern  Thunderbird.pattern  Zookeeper.pattern
loglite/baselines/pbc/src/: compress-c.cc  compress-c.h
loglite/baselines/pbc/src/compress/: compress.cc  compress.h
loglite/baselines/pbc/src/tools/: pbc-cli.cc
loglite/baselines/pbc/src/train/: pbc_train.h
loglite/baselines/pbc/src/unit_test/: test_main.cc  test_pbc.cc
loglite/scripts/: compile.py  fsst.py  loggrep.py  loglite.py  lzbench.py
query_eval/: COMPLETE_EVALUATION.md  POST_BLOOM_QGRAM_EXPLANATION.md  PUBLISHABILITY_QIDX3.md  README.md  __init__.py  artifacts.py  cli.py  locked_query_manifest.json  metrics.py  modes.py  persistence.py  profiling.py  queries.py  query_curation.py  registry.py  reports.py  runner.py  search_backends.py  specs.py  static_qgram_index.py  visualize_results.py  window_loader.py
query_eval/native/: qidx_search.cc
scripts/: compile.py  loglite.py  logreducer.py  logshrink.py  pbc.py  run.py
test_output/: Apache.log.expected91.txt  Apache.log.fields.decom  Apache.log.lite  Apache.log.lite.tmap  Apache.log.skip.decom  HDFS.log.fields.decom  HDFS.log.lite.tmap  HDFS.log.skip.decom  Linux.log.fields.decom  Linux.log.lite  Linux.log.lite.tmap  Linux.log.skip.decom  Spark.log.fields.decom  Spark.log.lite.tmap
tests/: test_query_eval.py
(+113 files in other folders)
